name:                vl-haskell
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/vl-haskell#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     VoiceLeading.Base
                     , VoiceLeading.Theory
                     , VoiceLeading.Distribution
                     , VoiceLeading.Automaton
                     , VoiceLeading.Helpers
                     , VoiceLeading.IO.Midi
                     , VoiceLeading.IO.LilyPond
                     , VoiceLeading.IO.Plotting
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , vector
                     , mtl
                     , primitive
                     , transformers
                     , lens
                     , memoize
                     , machines
                     , mwc-random
                     , filepath
                     , directory
                     , temporary
                     , process
                     , aeson
                     , bytestring
                     , HCodecs
                     , lilypond
                     , prettify
                     , terminal-progress-bar
                     , Chart, Chart-cairo, Chart-gtk
  default-language:    Haskell2010

executable vl-haskell-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , vl-haskell
                     , containers
  default-language:    Haskell2010

test-suite vl-haskell-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , vl-haskell
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/vl-haskell
